ProgrammingLanguage/Assignment2/antlr4-cpp/BParser.cpp

// Generated from B.g4 by ANTLR 4.11.1


#include "BVisitor.h"

#include "BParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BParserStaticData final {
  BParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BParserStaticData(const BParserStaticData&) = delete;
  BParserStaticData(BParserStaticData&&) = delete;
  BParserStaticData& operator=(const BParserStaticData&) = delete;
  BParserStaticData& operator=(BParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag bParserOnceFlag;
BParserStaticData *bParserStaticData = nullptr;

void bParserInitialize() {
  assert(bParserStaticData == nullptr);
  auto staticData = std::make_unique<BParserStaticData>(
    std::vector<std::string>{
      "program", "definition", "funcdef", "statement", "autostmt", "declstmt", 
      "blockstmt", "ifstmt", "whilestmt", "expressionstmt", "returnstmt", 
      "nullstmt", "expr", "atom", "expression", "funcinvocation", "constant", 
      "name", "directive"
    },
    std::vector<std::string>{
      "", "'('", "','", "')'", "'{'", "'}'", "'auto'", "'+'", "'-'", "'*'", 
      "'/'", "'!'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'&&'", 
      "'||'", "'\\u003F'", "':'", "';'", "'if'", "'else'", "'while'", "'return'", 
      "'='"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "AUTO", "PLUS", "MINUS", "MUL", "DIV", "NOT", 
      "GT", "GTE", "LT", "LTE", "EQ", "NEQ", "AND", "OR", "QUEST", "COLON", 
      "SEMI", "IF", "ELSE", "WHILE", "RETURN", "ASSN", "BOOL", "NAME", "INT", 
      "REAL", "STRING", "CHAR", "SHARP_DIRECTIVE", "BLOCKCOMMENT", "LINECOMMENT", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  bParserStaticData = staticData.release();
}

}

BParser::BParser(TokenStream *input) : BParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BParser::BParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *bParserStaticData->atn, bParserStaticData->decisionToDFA, bParserStaticData->sharedContextCache, options);
}

BParser::~BParser() {
  delete _interpreter;
}

const atn::ATN& BParser::getATN() const {
  return *bParserStaticData->atn;
}

std::string BParser::getGrammarFileName() const {
  return "B.g4";
}

const std::vector<std::string>& BParser::getRuleNames() const {
  return bParserStaticData->ruleNames;
}

const dfa::Vocabulary& BParser::getVocabulary() const {
  return bParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BParser::getSerializedATN() const {
  return bParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

BParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BParser::ProgramContext::EOF() {
  return getToken(BParser::EOF, 0);
}

std::vector<BParser::DirectiveContext *> BParser::ProgramContext::directive() {
  return getRuleContexts<BParser::DirectiveContext>();
}

BParser::DirectiveContext* BParser::ProgramContext::directive(size_t i) {
  return getRuleContext<BParser::DirectiveContext>(i);
}

std::vector<BParser::DefinitionContext *> BParser::ProgramContext::definition() {
  return getRuleContexts<BParser::DefinitionContext>();
}

BParser::DefinitionContext* BParser::ProgramContext::definition(size_t i) {
  return getRuleContext<BParser::DefinitionContext>(i);
}


size_t BParser::ProgramContext::getRuleIndex() const {
  return BParser::RuleProgram;
}


std::any BParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

BParser::ProgramContext* BParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, BParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BParser::AUTO

    || _la == BParser::SHARP_DIRECTIVE) {
      setState(40);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case BParser::SHARP_DIRECTIVE: {
          setState(38);
          directive();
          break;
        }

        case BParser::AUTO: {
          setState(39);
          definition();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(45);
    match(BParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionContext ------------------------------------------------------------------

BParser::DefinitionContext::DefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BParser::AutostmtContext* BParser::DefinitionContext::autostmt() {
  return getRuleContext<BParser::AutostmtContext>(0);
}

BParser::DeclstmtContext* BParser::DefinitionContext::declstmt() {
  return getRuleContext<BParser::DeclstmtContext>(0);
}

BParser::FuncdefContext* BParser::DefinitionContext::funcdef() {
  return getRuleContext<BParser::FuncdefContext>(0);
}


size_t BParser::DefinitionContext::getRuleIndex() const {
  return BParser::RuleDefinition;
}


std::any BParser::DefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitDefinition(this);
  else
    return visitor->visitChildren(this);
}

BParser::DefinitionContext* BParser::definition() {
  DefinitionContext *_localctx = _tracker.createInstance<DefinitionContext>(_ctx, getState());
  enterRule(_localctx, 2, BParser::RuleDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(47);
      autostmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(48);
      declstmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(49);
      funcdef();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncdefContext ------------------------------------------------------------------

BParser::FuncdefContext::FuncdefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BParser::FuncdefContext::AUTO() {
  return getTokens(BParser::AUTO);
}

tree::TerminalNode* BParser::FuncdefContext::AUTO(size_t i) {
  return getToken(BParser::AUTO, i);
}

std::vector<BParser::NameContext *> BParser::FuncdefContext::name() {
  return getRuleContexts<BParser::NameContext>();
}

BParser::NameContext* BParser::FuncdefContext::name(size_t i) {
  return getRuleContext<BParser::NameContext>(i);
}

BParser::StatementContext* BParser::FuncdefContext::statement() {
  return getRuleContext<BParser::StatementContext>(0);
}


size_t BParser::FuncdefContext::getRuleIndex() const {
  return BParser::RuleFuncdef;
}


std::any BParser::FuncdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitFuncdef(this);
  else
    return visitor->visitChildren(this);
}

BParser::FuncdefContext* BParser::funcdef() {
  FuncdefContext *_localctx = _tracker.createInstance<FuncdefContext>(_ctx, getState());
  enterRule(_localctx, 4, BParser::RuleFuncdef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(BParser::AUTO);
    setState(53);
    name();
    setState(54);
    match(BParser::T__0);
    setState(65);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BParser::AUTO) {
      setState(55);
      match(BParser::AUTO);
      setState(56);
      name();
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == BParser::T__1) {
        setState(57);
        match(BParser::T__1);
        setState(58);
        match(BParser::AUTO);
        setState(59);
        name();
        setState(64);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(67);
    match(BParser::T__2);
    setState(68);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

BParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BParser::AutostmtContext* BParser::StatementContext::autostmt() {
  return getRuleContext<BParser::AutostmtContext>(0);
}

BParser::DeclstmtContext* BParser::StatementContext::declstmt() {
  return getRuleContext<BParser::DeclstmtContext>(0);
}

BParser::BlockstmtContext* BParser::StatementContext::blockstmt() {
  return getRuleContext<BParser::BlockstmtContext>(0);
}

BParser::IfstmtContext* BParser::StatementContext::ifstmt() {
  return getRuleContext<BParser::IfstmtContext>(0);
}

BParser::WhilestmtContext* BParser::StatementContext::whilestmt() {
  return getRuleContext<BParser::WhilestmtContext>(0);
}

BParser::ExpressionstmtContext* BParser::StatementContext::expressionstmt() {
  return getRuleContext<BParser::ExpressionstmtContext>(0);
}

BParser::ReturnstmtContext* BParser::StatementContext::returnstmt() {
  return getRuleContext<BParser::ReturnstmtContext>(0);
}

BParser::NullstmtContext* BParser::StatementContext::nullstmt() {
  return getRuleContext<BParser::NullstmtContext>(0);
}

BParser::DirectiveContext* BParser::StatementContext::directive() {
  return getRuleContext<BParser::DirectiveContext>(0);
}


size_t BParser::StatementContext::getRuleIndex() const {
  return BParser::RuleStatement;
}


std::any BParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

BParser::StatementContext* BParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, BParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(70);
      autostmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(71);
      declstmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(72);
      blockstmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(73);
      ifstmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(74);
      whilestmt();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(75);
      expressionstmt();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(76);
      returnstmt();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(77);
      nullstmt();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(78);
      directive();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AutostmtContext ------------------------------------------------------------------

BParser::AutostmtContext::AutostmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BParser::AutostmtContext::AUTO() {
  return getToken(BParser::AUTO, 0);
}

std::vector<BParser::NameContext *> BParser::AutostmtContext::name() {
  return getRuleContexts<BParser::NameContext>();
}

BParser::NameContext* BParser::AutostmtContext::name(size_t i) {
  return getRuleContext<BParser::NameContext>(i);
}

tree::TerminalNode* BParser::AutostmtContext::SEMI() {
  return getToken(BParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> BParser::AutostmtContext::ASSN() {
  return getTokens(BParser::ASSN);
}

tree::TerminalNode* BParser::AutostmtContext::ASSN(size_t i) {
  return getToken(BParser::ASSN, i);
}

std::vector<BParser::ConstantContext *> BParser::AutostmtContext::constant() {
  return getRuleContexts<BParser::ConstantContext>();
}

BParser::ConstantContext* BParser::AutostmtContext::constant(size_t i) {
  return getRuleContext<BParser::ConstantContext>(i);
}


size_t BParser::AutostmtContext::getRuleIndex() const {
  return BParser::RuleAutostmt;
}


std::any BParser::AutostmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitAutostmt(this);
  else
    return visitor->visitChildren(this);
}

BParser::AutostmtContext* BParser::autostmt() {
  AutostmtContext *_localctx = _tracker.createInstance<AutostmtContext>(_ctx, getState());
  enterRule(_localctx, 8, BParser::RuleAutostmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(BParser::AUTO);
    setState(82);
    name();
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BParser::ASSN) {
      setState(83);
      match(BParser::ASSN);
      setState(84);
      constant();
    }
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BParser::T__1) {
      setState(87);
      match(BParser::T__1);
      setState(88);
      name();
      setState(91);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == BParser::ASSN) {
        setState(89);
        match(BParser::ASSN);
        setState(90);
        constant();
      }
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(98);
    match(BParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclstmtContext ------------------------------------------------------------------

BParser::DeclstmtContext::DeclstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BParser::DeclstmtContext::AUTO() {
  return getTokens(BParser::AUTO);
}

tree::TerminalNode* BParser::DeclstmtContext::AUTO(size_t i) {
  return getToken(BParser::AUTO, i);
}

BParser::NameContext* BParser::DeclstmtContext::name() {
  return getRuleContext<BParser::NameContext>(0);
}

tree::TerminalNode* BParser::DeclstmtContext::SEMI() {
  return getToken(BParser::SEMI, 0);
}


size_t BParser::DeclstmtContext::getRuleIndex() const {
  return BParser::RuleDeclstmt;
}


std::any BParser::DeclstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitDeclstmt(this);
  else
    return visitor->visitChildren(this);
}

BParser::DeclstmtContext* BParser::declstmt() {
  DeclstmtContext *_localctx = _tracker.createInstance<DeclstmtContext>(_ctx, getState());
  enterRule(_localctx, 10, BParser::RuleDeclstmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(BParser::AUTO);
    setState(101);
    name();
    setState(102);
    match(BParser::T__0);
    setState(111);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BParser::AUTO) {
      setState(103);
      match(BParser::AUTO);
      setState(108);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == BParser::T__1) {
        setState(104);
        match(BParser::T__1);
        setState(105);
        match(BParser::AUTO);
        setState(110);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(113);
    match(BParser::T__2);
    setState(114);
    match(BParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockstmtContext ------------------------------------------------------------------

BParser::BlockstmtContext::BlockstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BParser::StatementContext *> BParser::BlockstmtContext::statement() {
  return getRuleContexts<BParser::StatementContext>();
}

BParser::StatementContext* BParser::BlockstmtContext::statement(size_t i) {
  return getRuleContext<BParser::StatementContext>(i);
}


size_t BParser::BlockstmtContext::getRuleIndex() const {
  return BParser::RuleBlockstmt;
}


std::any BParser::BlockstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitBlockstmt(this);
  else
    return visitor->visitChildren(this);
}

BParser::BlockstmtContext* BParser::blockstmt() {
  BlockstmtContext *_localctx = _tracker.createInstance<BlockstmtContext>(_ctx, getState());
  enterRule(_localctx, 12, BParser::RuleBlockstmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    match(BParser::T__3);
    setState(120);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 34204551634) != 0) {
      setState(117);
      statement();
      setState(122);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(123);
    match(BParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfstmtContext ------------------------------------------------------------------

BParser::IfstmtContext::IfstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BParser::IfstmtContext::IF() {
  return getToken(BParser::IF, 0);
}

BParser::ExprContext* BParser::IfstmtContext::expr() {
  return getRuleContext<BParser::ExprContext>(0);
}

std::vector<BParser::StatementContext *> BParser::IfstmtContext::statement() {
  return getRuleContexts<BParser::StatementContext>();
}

BParser::StatementContext* BParser::IfstmtContext::statement(size_t i) {
  return getRuleContext<BParser::StatementContext>(i);
}

tree::TerminalNode* BParser::IfstmtContext::ELSE() {
  return getToken(BParser::ELSE, 0);
}


size_t BParser::IfstmtContext::getRuleIndex() const {
  return BParser::RuleIfstmt;
}


std::any BParser::IfstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitIfstmt(this);
  else
    return visitor->visitChildren(this);
}

BParser::IfstmtContext* BParser::ifstmt() {
  IfstmtContext *_localctx = _tracker.createInstance<IfstmtContext>(_ctx, getState());
  enterRule(_localctx, 14, BParser::RuleIfstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(BParser::IF);
    setState(126);
    match(BParser::T__0);
    setState(127);
    expr(0);
    setState(128);
    match(BParser::T__2);
    setState(129);
    statement();
    setState(132);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      setState(130);
      match(BParser::ELSE);
      setState(131);
      statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhilestmtContext ------------------------------------------------------------------

BParser::WhilestmtContext::WhilestmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BParser::WhilestmtContext::WHILE() {
  return getToken(BParser::WHILE, 0);
}

BParser::ExprContext* BParser::WhilestmtContext::expr() {
  return getRuleContext<BParser::ExprContext>(0);
}

BParser::StatementContext* BParser::WhilestmtContext::statement() {
  return getRuleContext<BParser::StatementContext>(0);
}


size_t BParser::WhilestmtContext::getRuleIndex() const {
  return BParser::RuleWhilestmt;
}


std::any BParser::WhilestmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitWhilestmt(this);
  else
    return visitor->visitChildren(this);
}

BParser::WhilestmtContext* BParser::whilestmt() {
  WhilestmtContext *_localctx = _tracker.createInstance<WhilestmtContext>(_ctx, getState());
  enterRule(_localctx, 16, BParser::RuleWhilestmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    match(BParser::WHILE);
    setState(135);
    match(BParser::T__0);
    setState(136);
    expr(0);
    setState(137);
    match(BParser::T__2);
    setState(138);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionstmtContext ------------------------------------------------------------------

BParser::ExpressionstmtContext::ExpressionstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BParser::ExpressionContext* BParser::ExpressionstmtContext::expression() {
  return getRuleContext<BParser::ExpressionContext>(0);
}

tree::TerminalNode* BParser::ExpressionstmtContext::SEMI() {
  return getToken(BParser::SEMI, 0);
}


size_t BParser::ExpressionstmtContext::getRuleIndex() const {
  return BParser::RuleExpressionstmt;
}


std::any BParser::ExpressionstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitExpressionstmt(this);
  else
    return visitor->visitChildren(this);
}

BParser::ExpressionstmtContext* BParser::expressionstmt() {
  ExpressionstmtContext *_localctx = _tracker.createInstance<ExpressionstmtContext>(_ctx, getState());
  enterRule(_localctx, 18, BParser::RuleExpressionstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    expression();
    setState(141);
    match(BParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnstmtContext ------------------------------------------------------------------

BParser::ReturnstmtContext::ReturnstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BParser::ReturnstmtContext::RETURN() {
  return getToken(BParser::RETURN, 0);
}

tree::TerminalNode* BParser::ReturnstmtContext::SEMI() {
  return getToken(BParser::SEMI, 0);
}

BParser::ExpressionContext* BParser::ReturnstmtContext::expression() {
  return getRuleContext<BParser::ExpressionContext>(0);
}


size_t BParser::ReturnstmtContext::getRuleIndex() const {
  return BParser::RuleReturnstmt;
}


std::any BParser::ReturnstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitReturnstmt(this);
  else
    return visitor->visitChildren(this);
}

BParser::ReturnstmtContext* BParser::returnstmt() {
  ReturnstmtContext *_localctx = _tracker.createInstance<ReturnstmtContext>(_ctx, getState());
  enterRule(_localctx, 20, BParser::RuleReturnstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    match(BParser::RETURN);
    setState(149);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      setState(144);
      expression();
      break;
    }

    case 2: {
      setState(145);
      match(BParser::T__0);
      setState(146);
      expression();
      setState(147);
      match(BParser::T__2);
      break;
    }

    default:
      break;
    }
    setState(151);
    match(BParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NullstmtContext ------------------------------------------------------------------

BParser::NullstmtContext::NullstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BParser::NullstmtContext::SEMI() {
  return getToken(BParser::SEMI, 0);
}


size_t BParser::NullstmtContext::getRuleIndex() const {
  return BParser::RuleNullstmt;
}


std::any BParser::NullstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BVisitor*>(visitor))
    return parserVisitor->visitNullstmt(this);
  else
    return visitor->visitChildren(this);
}

BParser::NullstmtContext* BParser::nullstmt() {
  NullstmtContext *_localctx = _tracker.createInstance<NullstmtContext>(_ctx, getState());
  enterRule(_localctx, 22, BParser::RuleNullstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    match(BParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

BParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BParser::AtomContext* BParser::ExprContext::atom() {
  return getRuleContext<BParser::AtomContext>(0);
}

tree::TerminalNode* BParser::ExprContext::PLUS() {
  return getToken(BParser::PLUS, 0);
}
